// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should preselect paid plan 1`] = `
<Step
  finished={false}
  onOpen={[Function]}
  open={true}
  renderForm={[Function]}
  renderResult={[Function]}
  stepNumber={2}
  stepTitle="onboarding.create_organization.enter_payment_details"
/>
`;

exports[`should preselect paid plan 2`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.enter_payment_details
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <Connect(withCurrentUser(BillingFormShim))
        onCommit={[MockFunction]}
        onFailToUpgrade={[MockFunction]}
        organizationKey={[MockFunction]}
        subscriptionPlans={Array []}
      >
        <Component />
      </Connect(withCurrentUser(BillingFormShim))>
    </div>
  </div>
</div>
`;

exports[`should render and use free plan 1`] = `
<Step
  finished={false}
  onOpen={[Function]}
  open={true}
  renderForm={[Function]}
  renderResult={[Function]}
  stepNumber={2}
  stepTitle="onboarding.create_organization.choose_plan"
/>
`;

exports[`should render and use free plan 2`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.choose_plan
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <PlanSelect
        onChange={[Function]}
        plan="free"
        startingPrice="10"
      />
      <div
        className="display-flex-center big-spacer-top"
      >
        <SubmitButton
          disabled={false}
          onClick={[Function]}
        >
          my_account.create_organization
        </SubmitButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`should upgrade 1`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.create_organization.choose_plan
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <PlanSelect
        onChange={[Function]}
        plan="paid"
        startingPrice="10"
      />
      <Connect(withCurrentUser(BillingFormShim))
        onCommit={[MockFunction]}
        onFailToUpgrade={[MockFunction]}
        organizationKey={[MockFunction]}
        subscriptionPlans={Array []}
      >
        <Component />
      </Connect(withCurrentUser(BillingFormShim))>
    </div>
  </div>
</div>
`;
